# primate-sim

./: .gitignore  BINtoASM.cpp  CMakeLists.txt  README.md  alu.cpp  topModule.pc
.github/workflows/: cmake-single-platform.yml
AcceleratorTest/: MatMul.cpp  MatMul.hpp
BFUProcessInstructionGen/: BFUInstructions.cpp  BFUInstructions.hpp  FuncGen.cpp  test
BFUProcessInstructionGen/.cpp/: MatMul_gen.cpp  io_gen.cpp  lsu_gen.cpp
BFUProcessInstructionGen/src/: CMakeLists.txt  MatMul_gen.cpp  io.cpp  io_gen.cpp  lsu.cpp  lsu_gen.cpp  threebitadd_gen.cpp
BFUs/: MatMul.cpp  lsu.cpp
BFUs/inc/: MatMul.hpp  MatMul.txt  io.hpp  lsu.hpp  threebitadd.hpp
BFUs/src/: CMakeLists.txt  MatMul.cpp  MatMul.txt  input.txt  io.cpp  lsu.cpp  threebitadd.cpp
Experimental Generator/: BFUInstructions.cpp  Generator.cpp  test
VLIWParsing/: Instruction.cpp  main.cpp
inc/: BFU.hpp  BlueFunctionalUnit.hpp  ExtractUnit.hpp  FuncUnit.hpp  FunctionalUnit.hpp  IOUnit.hpp  Insert.hpp  InstrInfo.hpp  Instruction.h  Instruction.hpp  LSU.hpp  MachineState.hpp  MatMul.hpp  MergedUnit.hpp  PrimateConfig.hpp  Register.hpp  alu.hpp  consts.hpp  extract.hpp  insert.hpp
src/: BFU.cpp  BlueFunctionalUnit.cpp  CMakeLists.txt  ExtractUnit.cpp  FunctionalUnitWrapper.cpp  FunctionalUnitWrapper.cpp.bak  IOUnit.cpp  Insert.cpp  Instruction.cpp  LSU.cpp  MachineState.cpp  MatMul.cpp  VLIWParsing.cpp  alu.cpp  extract.cpp  insert.cpp  main.cpp
testing/: simpleTCP.s
testing/13bitadd/: bfu_list.txt.fake  primate.cfg  whatIPutInPrimate.c
testing/iou_case_1/: expected_out.txt  input.txt  primate.cfg  prog.s
testing/simplecase_1/: primate.cfg
testing/simplecase_3/: assembly.asm  bfu_list.txt  primate.cfg
